@@ -261,6 +261,9 @@ Fixes:
    * Fix Segfault in elementary file_selector_example when closed
    * Fix Showing multiple popups in Entry.
    * Fix elm_object_item_part_content_set bug with end content in elm_list.
+   * Entry: Change the keyboard mode only if the imf is not available. If the
+   imf is available, the keyboard mode should be decided by ime, but not entry.
+   This prevents the asynchronous states between ime and conformant.
 
 Removals:
 
